fix(sds): use higher contrast colors for accessibility
OUI-3229

--- a/projects/sds/src/app/side-navigation/accordion-links/accordion-links.component.scss
+++ b/projects/sds/src/app/side-navigation/accordion-links/accordion-links.component.scss
@@ -33,7 +33,6 @@ $triangle-pointing-border-width: 6px;
 	margin-top: $triangle-pointing-border-width;
 	margin-left: $triangle-pointing-border-width;
 	margin-right: $triangle-pointing-border-width;
-	color: rgba(153, 153, 153, 60%);
 	border-top: $triangle-pointing-border-width solid transparent;
 	border-bottom: $triangle-pointing-border-width solid transparent;
 	border-left: $triangle-pointing-border-width solid;
@@ -58,10 +57,10 @@ $triangle-pointing-border-width: 6px;
 	padding: 0 20px;
 	margin-bottom: 4px;
 	font-weight: 900;
+	font-size: 0.9rem;
 	min-height: 20px;
 	letter-spacing: 0.35em;
 	text-transform: uppercase;
-	color: variables.$inactive;
 
 	&:not(:first-child) {
 		margin-top: 16px;
